@@ -23,6 +23,8 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 import javax.inject.Named;
@@ -39,6 +41,7 @@ import org.killbill.billing.util.audit.DefaultAuditLog;
 import org.killbill.billing.util.audit.DefaultAuditLogWithHistory;
 import org.killbill.billing.util.cache.CacheControllerDispatcher;
 import org.killbill.billing.util.callcontext.InternalCallContextFactory;
+import org.killbill.commons.utils.collect.Iterators;
 import org.killbill.billing.util.dao.EntityHistoryModelDao;
 import org.killbill.billing.util.dao.HistorySqlDao;
 import org.killbill.billing.util.dao.NonEntityDao;
@@ -47,17 +50,9 @@ import org.killbill.billing.util.dao.RecordIdIdMappings;
 import org.killbill.billing.util.dao.TableName;
 import org.killbill.billing.util.entity.dao.DBRouter;
 import org.killbill.billing.util.entity.dao.EntitySqlDao;
-import org.killbill.billing.util.entity.dao.EntitySqlDaoTransactionWrapper;
 import org.killbill.billing.util.entity.dao.EntitySqlDaoTransactionalJdbiWrapper;
-import org.killbill.billing.util.entity.dao.EntitySqlDaoWrapperFactory;
 import org.killbill.clock.Clock;
 import org.skife.jdbi.v2.IDBI;
-
-import com.google.common.base.Function;
-import com.google.common.collect.Collections2;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Iterators;
-import com.google.common.collect.Lists;
 
 import static org.killbill.billing.util.glue.IDBISetup.MAIN_RO_IDBI_NAMED;
 
@@ -106,75 +101,55 @@ public class DefaultAuditDao implements AuditDao {
     }
 
     private Iterator<AuditLog> buildAuditLogsFromModelDao(final Iterator<AuditLogModelDao> auditLogsForAccountRecordId, final InternalTenantContext tenantContext) {
-        final Map<TableName, Map<Long, UUID>> recordIdIdsCache = new HashMap<TableName, Map<Long, UUID>>();
-        final Map<TableName, Map<Long, UUID>> historyRecordIdIdsCache = new HashMap<TableName, Map<Long, UUID>>();
-        return Iterators.<AuditLogModelDao, AuditLog>transform(auditLogsForAccountRecordId,
-                                                               new Function<AuditLogModelDao, AuditLog>() {
-                                                                   @Override
-                                                                   public AuditLog apply(final AuditLogModelDao input) {
-                                                                       // If input is for e.g. TAG_DEFINITION_HISTORY, retrieve TAG_DEFINITIONS
-                                                                       // For tables without history, e.g. TENANT, originalTableNameForHistoryTableName will be null
-                                                                       final TableName originalTableNameForHistoryTableName = findTableNameForHistoryTableName(input.getTableName());
+        final Map<TableName, Map<Long, UUID>> recordIdIdsCache = new HashMap<>();
+        final Map<TableName, Map<Long, UUID>> historyRecordIdIdsCache = new HashMap<>();
+        return Iterators.transform(auditLogsForAccountRecordId, input -> {
+            final TableName originalTableNameForHistoryTableName = findTableNameForHistoryTableName(input.getTableName());
+            final NonEntitySqlDao nonEntitySqlDao = dbRouter.onDemand(true);
+            final ObjectType objectType;
+            final UUID auditedEntityId;
+            if (originalTableNameForHistoryTableName != null) {
+                // input point to a history entry
+                objectType = originalTableNameForHistoryTableName.getObjectType();
 
-                                                                       final NonEntitySqlDao nonEntitySqlDao = dbRouter.onDemand(true);
-                                                                       final ObjectType objectType;
-                                                                       final UUID auditedEntityId;
-                                                                       if (originalTableNameForHistoryTableName != null) {
-                                                                           // input point to a history entry
-                                                                           objectType = originalTableNameForHistoryTableName.getObjectType();
+                if (historyRecordIdIdsCache.get(originalTableNameForHistoryTableName) == null) {
+                    if (TableName.ACCOUNT.equals(originalTableNameForHistoryTableName)) {
+                        final Iterable<RecordIdIdMappings> mappings = nonEntitySqlDao.getHistoryRecordIdIdMappingsForAccountsTable(originalTableNameForHistoryTableName.getTableName(), input.getTableName().getTableName(), tenantContext);
+                        historyRecordIdIdsCache.put(originalTableNameForHistoryTableName, RecordIdIdMappings.toMap(mappings));
+                    } else if (TableName.TAG_DEFINITIONS.equals(originalTableNameForHistoryTableName)) {
+                        final Iterable<RecordIdIdMappings> mappings = nonEntitySqlDao.getHistoryRecordIdIdMappingsForTablesWithoutAccountRecordId(originalTableNameForHistoryTableName.getTableName(), input.getTableName().getTableName(), tenantContext);
+                        historyRecordIdIdsCache.put(originalTableNameForHistoryTableName, RecordIdIdMappings.toMap(mappings));
+                    } else {
+                        final Iterable<RecordIdIdMappings> mappings = nonEntitySqlDao.getHistoryRecordIdIdMappings(originalTableNameForHistoryTableName.getTableName(), input.getTableName().getTableName(), tenantContext);
+                        historyRecordIdIdsCache.put(originalTableNameForHistoryTableName, RecordIdIdMappings.toMap(mappings));
+                    }
+                }
+                auditedEntityId = historyRecordIdIdsCache.get(originalTableNameForHistoryTableName).get(input.getTargetRecordId());
+            } else {
+                objectType = input.getTableName().getObjectType();
+                if (recordIdIdsCache.get(input.getTableName()) == null) {
+                    final Iterable<RecordIdIdMappings> mappings = nonEntitySqlDao.getRecordIdIdMappings(input.getTableName().getTableName(), tenantContext);
+                    recordIdIdsCache.put(input.getTableName(), RecordIdIdMappings.toMap(mappings));
+                }
+                auditedEntityId = recordIdIdsCache.get(input.getTableName()).get(input.getTargetRecordId());
+            }
+            return new DefaultAuditLog(input, objectType, auditedEntityId);
+        });
+    }
 
-                                                                           if (historyRecordIdIdsCache.get(originalTableNameForHistoryTableName) == null) {
-                                                                               if (TableName.ACCOUNT.equals(originalTableNameForHistoryTableName)) {
-                                                                                   final Iterable<RecordIdIdMappings> mappings = nonEntitySqlDao.getHistoryRecordIdIdMappingsForAccountsTable(originalTableNameForHistoryTableName.getTableName(),
-                                                                                                                                                                                              input.getTableName().getTableName(),
-                                                                                                                                                                                              tenantContext);
-                                                                                   historyRecordIdIdsCache.put(originalTableNameForHistoryTableName, RecordIdIdMappings.toMap(mappings));
-                                                                               } else if (TableName.TAG_DEFINITIONS.equals(originalTableNameForHistoryTableName)) {
-                                                                                   final Iterable<RecordIdIdMappings> mappings = nonEntitySqlDao.getHistoryRecordIdIdMappingsForTablesWithoutAccountRecordId(originalTableNameForHistoryTableName.getTableName(),
-                                                                                                                                                                                                             input.getTableName().getTableName(),
-                                                                                                                                                                                                             tenantContext);
-                                                                                   historyRecordIdIdsCache.put(originalTableNameForHistoryTableName, RecordIdIdMappings.toMap(mappings));
-                                                                               } else {
-                                                                                   final Iterable<RecordIdIdMappings> mappings = nonEntitySqlDao.getHistoryRecordIdIdMappings(originalTableNameForHistoryTableName.getTableName(),
-                                                                                                                                                                              input.getTableName().getTableName(),
-                                                                                                                                                                              tenantContext);
-                                                                                   historyRecordIdIdsCache.put(originalTableNameForHistoryTableName, RecordIdIdMappings.toMap(mappings));
-
-                                                                               }
-                                                                           }
-
-                                                                           auditedEntityId = historyRecordIdIdsCache.get(originalTableNameForHistoryTableName).get(input.getTargetRecordId());
-                                                                       } else {
-                                                                           objectType = input.getTableName().getObjectType();
-
-                                                                           if (recordIdIdsCache.get(input.getTableName()) == null) {
-                                                                               final Iterable<RecordIdIdMappings> mappings = nonEntitySqlDao.getRecordIdIdMappings(input.getTableName().getTableName(),
-                                                                                                                                                                   tenantContext);
-                                                                               recordIdIdsCache.put(input.getTableName(), RecordIdIdMappings.toMap(mappings));
-                                                                           }
-
-                                                                           auditedEntityId = recordIdIdsCache.get(input.getTableName()).get(input.getTargetRecordId());
-                                                                       }
-
-                                                                       return new DefaultAuditLog(input, objectType, auditedEntityId);
-                                                                   }
-
-                                                                   private TableName findTableNameForHistoryTableName(final TableName historyTableName) {
-                                                                       for (final TableName tableName : TableName.values()) {
-                                                                           if (historyTableName.equals(tableName.getHistoryTableName())) {
-                                                                               return tableName;
-                                                                           }
-                                                                       }
-
-                                                                       return null;
-                                                                   }
-                                                               });
+    private TableName findTableNameForHistoryTableName(final TableName historyTableName) {
+        for (final TableName tableName : TableName.values()) {
+            if (historyTableName.equals(tableName.getHistoryTableName())) {
+                return tableName;
+            }
+        }
+        return null;
     }
 
     @Override
     public List<AuditLog> getAuditLogsForId(final TableName tableName, final UUID objectId, final AuditLevel auditLevel, final InternalTenantContext context) {
 
-        List<AuditLog> result = ImmutableList.of();
+        List<AuditLog> result = List.of();
         if (tableName.hasHistoryTable()) {
             result = doGetAuditLogsViaHistoryForId(tableName, objectId, auditLevel, context);
         }
@@ -196,40 +171,30 @@ public class DefaultAuditDao implements AuditDao {
             throw new IllegalStateException("History table shouldn't be null for " + tableName);
         }
 
-        return transactionalSqlDao.execute(true, new EntitySqlDaoTransactionWrapper<List<AuditLogWithHistory>>() {
-            @Override
-            public List<AuditLogWithHistory> inTransaction(final EntitySqlDaoWrapperFactory entitySqlDaoWrapperFactory) throws Exception {
-                final Long targetRecordId = dbRouter.onDemand(true).getRecordIdFromObject(objectId.toString(), tableName.getTableName());
-                final List<EntityHistoryModelDao> objectHistory = transactional.getHistoryForTargetRecordId(true, targetRecordId, context);
-
-                return ImmutableList.<AuditLogWithHistory>copyOf(Collections2.transform(entitySqlDaoWrapperFactory.become(EntitySqlDao.class).getAuditLogsViaHistoryForTargetRecordId(historyTableName.name(),
-                                                                                                                                                                                      historyTableName.getTableName().toLowerCase(),
-                                                                                                                                                                                      targetRecordId,
-                                                                                                                                                                                      context),
-                                                                                        new Function<AuditLogModelDao, AuditLogWithHistory>() {
-                                                                                            @Override
-                                                                                            public AuditLogWithHistory apply(final AuditLogModelDao inputAuditLog) {
-                                                                                                EntityHistoryModelDao historyEntity = null;
-                                                                                                if (objectHistory != null) {
-                                                                                                    for (final EntityHistoryModelDao history : objectHistory) {
-                                                                                                        if (history.getHistoryRecordId().equals(inputAuditLog.getTargetRecordId())) {
-                                                                                                            historyEntity = history;
-                                                                                                            break;
-                                                                                                        }
-                                                                                                    }
-                                                                                                }
-
-                                                                                                return new DefaultAuditLogWithHistory((historyEntity == null ? null : historyEntity.getEntity()), inputAuditLog, tableName.getObjectType(), objectId);
-                                                                                            }
-                                                                                        }));
-            }
+        return transactionalSqlDao.execute(true, entitySqlDaoWrapperFactory -> {
+            final Long targetRecordId = dbRouter.onDemand(true).getRecordIdFromObject(objectId.toString(), tableName.getTableName());
+            final List<EntityHistoryModelDao> objectHistory = transactional.getHistoryForTargetRecordId(true, targetRecordId, context);
+            final List<AuditLogModelDao> result = entitySqlDaoWrapperFactory
+                    .become(EntitySqlDao.class)
+                    .getAuditLogsViaHistoryForTargetRecordId(historyTableName.name(), historyTableName.getTableName().toLowerCase(), targetRecordId, context);
+            return result.stream().map(transformAndFilterAuditLogDaoToModel(objectHistory, tableName, objectId)).collect(Collectors.toUnmodifiableList());
         });
+    }
+
+    private static Function<AuditLogModelDao, AuditLogWithHistory<?>> transformAndFilterAuditLogDaoToModel(final List<EntityHistoryModelDao> objectHistory, final TableName tableName, final UUID objectId) {
+        return auditLogModelDao -> {
+            EntityHistoryModelDao historyEntity = objectHistory == null ? null : objectHistory.stream()
+                    .filter(entityHistoryModelDao -> entityHistoryModelDao.getHistoryRecordId().equals(auditLogModelDao.getTargetRecordId()))
+                    .findFirst()
+                    .orElse(null);
+            return new DefaultAuditLogWithHistory((historyEntity == null ? null : historyEntity.getEntity()), auditLogModelDao, tableName.getObjectType(), objectId);
+        };
     }
 
     private List<AuditLog> doGetAuditLogsForId(final TableName tableName, final UUID objectId, final AuditLevel auditLevel, final InternalTenantContext context) {
         final Long recordId = dbRouter.onDemand(true).getRecordIdFromObject(objectId.toString(), tableName.getTableName());
         if (recordId == null) {
-            return ImmutableList.<AuditLog>of();
+            return List.of();
         } else {
             return getAuditLogsForRecordId(tableName, objectId, recordId, auditLevel, context);
         }
@@ -242,56 +207,45 @@ public class DefaultAuditDao implements AuditDao {
         }
 
         final Long targetRecordId = dbRouter.onDemand(true).getRecordIdFromObject(objectId.toString(), tableName.getTableName());
-        final List<AuditLog> allAuditLogs = transactionalSqlDao.execute(true, new EntitySqlDaoTransactionWrapper<List<AuditLog>>() {
-            @Override
-            public List<AuditLog> inTransaction(final EntitySqlDaoWrapperFactory entitySqlDaoWrapperFactory) throws Exception {
-                final List<AuditLogModelDao> auditLogsViaHistoryForTargetRecordId = entitySqlDaoWrapperFactory.become(EntitySqlDao.class).getAuditLogsViaHistoryForTargetRecordId(historyTableName.name(),
-                                                                                                                                                                                  historyTableName.getTableName().toLowerCase(),
-                                                                                                                                                                                  targetRecordId,
-                                                                                                                                                                                  context);
-                return buildAuditLogsFromModelDao(auditLogsViaHistoryForTargetRecordId, tableName.getObjectType(), objectId);
-            }
+        final List<AuditLog> allAuditLogs = transactionalSqlDao.execute(true, entitySqlDaoWrapperFactory -> {
+            final List<AuditLogModelDao> auditLogsViaHistoryForTargetRecordId = entitySqlDaoWrapperFactory
+                    .become(EntitySqlDao.class)
+                    .getAuditLogsViaHistoryForTargetRecordId(historyTableName.name(), historyTableName.getTableName().toLowerCase(), targetRecordId, context);
+            return buildAuditLogsFromModelDao(auditLogsViaHistoryForTargetRecordId, tableName.getObjectType(), objectId);
         });
         return filterAuditLogs(auditLevel, allAuditLogs);
     }
 
     private List<AuditLog> getAuditLogsForRecordId(final TableName tableName, final UUID auditedEntityId, final Long targetRecordId, final AuditLevel auditLevel, final InternalTenantContext context) {
-        final List<AuditLog> allAuditLogs = transactionalSqlDao.execute(true, new EntitySqlDaoTransactionWrapper<List<AuditLog>>() {
-            @Override
-            public List<AuditLog> inTransaction(final EntitySqlDaoWrapperFactory entitySqlDaoWrapperFactory) throws Exception {
-                final List<AuditLogModelDao> auditLogsForTargetRecordId = entitySqlDaoWrapperFactory.become(EntitySqlDao.class).getAuditLogsForTargetRecordId(tableName.name(),
-                                                                                                                                                              targetRecordId,
-                                                                                                                                                              context);
-                return buildAuditLogsFromModelDao(auditLogsForTargetRecordId, tableName.getObjectType(), auditedEntityId);
-            }
+        final List<AuditLog> allAuditLogs = transactionalSqlDao.execute(true, entitySqlDaoWrapperFactory -> {
+            final List<AuditLogModelDao> auditLogsForTargetRecordId = entitySqlDaoWrapperFactory
+                    .become(EntitySqlDao.class)
+                    .getAuditLogsForTargetRecordId(tableName.name(), targetRecordId, context);
+            return buildAuditLogsFromModelDao(auditLogsForTargetRecordId, tableName.getObjectType(), auditedEntityId);
         });
         return filterAuditLogs(auditLevel, allAuditLogs);
     }
 
-    private List<AuditLog> buildAuditLogsFromModelDao(final List<AuditLogModelDao> auditLogsForAccountRecordId, final ObjectType objectType, final UUID auditedEntityId) {
-        return Lists.<AuditLogModelDao, AuditLog>transform(auditLogsForAccountRecordId,
-                                                           new Function<AuditLogModelDao, AuditLog>() {
-                                                               @Override
-                                                               public AuditLog apply(final AuditLogModelDao input) {
-                                                                   return new DefaultAuditLog(input, objectType, auditedEntityId);
-                                                               }
-                                                           });
+    private static List<AuditLog> buildAuditLogsFromModelDao(final List<AuditLogModelDao> auditLogsForAccountRecordId, final ObjectType objectType, final UUID auditedEntityId) {
+        return auditLogsForAccountRecordId.stream()
+                .map(input -> new DefaultAuditLog(input, objectType, auditedEntityId))
+                .collect(Collectors.toUnmodifiableList());
     }
 
-    private List<AuditLog> filterAuditLogs(final AuditLevel auditLevel, final List<AuditLog> auditLogs) {
+    private static List<AuditLog> filterAuditLogs(final AuditLevel auditLevel, final List<AuditLog> auditLogs) {
         // TODO Do the filtering in the query
         if (AuditLevel.FULL.equals(auditLevel)) {
             return auditLogs;
         } else if (AuditLevel.MINIMAL.equals(auditLevel) && !auditLogs.isEmpty()) {
             if (ChangeType.INSERT.equals(auditLogs.get(0).getChangeType())) {
-                return ImmutableList.<AuditLog>of(auditLogs.get(0));
+                return List.<AuditLog>of(auditLogs.get(0));
             } else {
                 // We may be coming here via the history code path - only a single mapped history record id
                 // will be for the initial INSERT
-                return ImmutableList.<AuditLog>of();
+                return List.of();
             }
         } else if (AuditLevel.NONE.equals(auditLevel)) {
-            return ImmutableList.<AuditLog>of();
+            return List.of();
         } else {
             return auditLogs;
         }
